fix z-index

--- a/src/components/index/header/header.module.css
+++ b/src/components/index/header/header.module.css
@@ -31,7 +31,7 @@
   padding-left: 65px;
   margin-top: -150px !important;
   width: 100%;
-  z-index: 9;
+  z-index: 4;
   height: 400px;
 }
 .text {
